<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/profile" />
        <item
            android:id="@+id/edit_shelf"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/edit_shelf" />
        <item
            android:id="@+id/books_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/books" />
        <item
            android:id="@+id/favourite_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/favourite" />
        <item
            android:id="@+id/to_be_read_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/to_be_read" />
        <item
            android:id="@+id/read_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/read" />

        <item
            android:id="@+id/shelf"
            android:visible="false"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/shelf" />
    </group>



<!--    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
